2017-02-09 0.8.5 indev
Fix building on Windows.
Behavior changes:
 1. DnD into the main window now causes the dropped
 file to play.
 2. Switch back to w32usleep to increase bpm accuracy.
 3. Scan for plugins in application folder (in Windows),
 not in the working directory.


2017-02-09 0.8.5 indev
Add extra midi formats support via the file reader API.
Fix note counting.

2017-02-08 0.8.5 indev
Add API version verification. This breaks compatibility
with old versions of plugins.
Documentation.
Add RIFF MIDI support to the SMF reader.

2017-02-07 0.8.5 indev
First steps for the file reader API.
API additions and changes.
Fixed wrong button shown when started from file.

2017-02-07 0.8.3 alpha
Fixed 2D visualization broken by commit 8a0d671.

2017-02-01 0.8.3 alpha
Make packaging qmidiplayer less painful.
Add mime info.
Do not throw integers.
Fix incorrect font paths in Arch Linux.

2017-01-15 0.8.3 alpha
A little code refactoring.

2017-01-02 0.8.3 alpha
Can show measure indicators now.
Added new options to specify custom fonts.
Added a new handler API.
Minor rework on handler calling.

2016-12-27 0.8.3 alpha
First official version with experimental support for
the visualization plugin on Windows. Fixed several
critical bugs causing the plugin to crash QMP.

2016-12-11 0.8.3 alpha
Update the preset selection dialog to improve support
for external MIDI devices.

2016-09-23 0.8.3 alpha
Add a set of icons for dark themes and a option to
change the icon theme.

2016-09-16 0.8.3 alpha
Minor bug fix. Update documentation.

2016-09-15 0.8.3 alpha
Add a new visualization mode. Fix minor behavioral bugs.

2016-09-15 0.8.2 alpha
Fix FTBFS. Force Qt5 while building.

2016-06-05 0.8.2 alpha
Make preset selection dialog non-modal.

2016-06-03 0.8.2 alpha
Add the "restart fluidsynth" action.

2016-06-02 0.8.2 alpha
Add option to change note colors.

2016-06-01 0.8.2 alpha
Initial event modifier and event filter stub.

2016-05-31 0.8.2 alpha
Update documentation.
