@@ -44,9 +44,10 @@
 			<li>0.6.x  Settings and experimental Windows support</li>
 			<li>0.7.2  MIDI mapping, first stable version</li>
 			<li>0.7.8  Plugin interface, UI refactoring</li>
-			<li>0.8.x  Visualization (the default visualization plugin)</li>
-			<li>0.9.x  File reader plugin API, event filter/modifier API. Stable version.</li>
-			<li>1.x+   Translation, documentation, Maintaince only</li>
+			<li>0.8.x  Visualization (the default visualization plugin).</li>
+			<li>0.8.5+ File reader plugin API, event filter/modifier API. </li>
+			<li>0.9.x  API Stablization. Revive lite version.</li>
+			<li>1.x+   Translation, documentation, Maintaince only.</li>
 		</ul>
 		<h3 id="faq">FAQs</h3>
 		<h4>0. (Windows version) It complains about a missing dll!</h4>
@@ -64,21 +65,21 @@
 		github issue tracker</a>. Don't forget to check if the bug has already been
 		fixed in a newer version!
 		</p>
-		<h4>3. On which platform(s) do you develop this project?</h4>
+		<h4>3. On what platform(s) do you develop this project?</h4>
 		<p>
 		Major platforms used:
         <ul>
-            <li>Debian GNU/Linux unstable(sid) amd64 on a Lenovo ideapad Y570 (i7-2960XM, 16GB RAM, HD3000/GT555M)</li>
+            <li>Debian GNU/Linux unstable(sid) amd64 on custom machine (i7-2960XM, 16GB RAM, GTX960, X9SCV-QV4)</li>
             <li>Arch Linux amd64 on a Lenovo ThinkPad X1 yoga 1st Gen. (i7-6600U, 16GB RAM, HD520)</li>
         </ul>
         Platforms for building the Windows version:
         <ul>
-            <li>Windows 10 Pro on the ThinkPad X1 yoga mentioned above.</li>
+            <li>Windows 10 Insider Pro on the ThinkPad X1 yoga mentioned above.</li>
         </ul>
 		</p>
 		<h3 id="contact">Contact the author</h3>
 		<p>
-		E-mail: chirs241097 'at' gmail 'dot' com
+		E-mail: chirs241097 'at' gmail 'dot' com<br>
 		Twitter: @chirs241097
 		</p>
 	</div>
