@@ -60,6 +60,12 @@
 			Bank selecting to external devices is sent in raw format. The midi
 			file may be incompatible with your device.
 		</p>
+		<h3>9. 3D visualization is upsidedown/rotated/black.</h3>
+		<p>
+			For those who see a rotated display, try setting Visualization-Video/Multisampling
+			to 1 or above. If that doesn't solve your problem or you see nothing at
+			all, please send me more details about your problem.
+		</p>
 	</div>
 </body>
 </html>
