@@ -1,3 +1,8 @@
+2017-02-10 0.8.5 indev
+Road to standardize: use two parameters for pitchbend.
+Documentation.
+Minor bug fix.
+
 2017-02-09 0.8.5 indev
 Fix building on Windows.
 Behavior changes:
